# logic

./: .gitignore  pyproject.toml  requirements.txt
__tests__/: hogwarts.pl  test_constraints.py  test_hogwarts.py  test_inference.py  test_knowledgebase.py  test_language.py  test_parser.py  test_table.py  test_unification.py
experiments/: families.ipynb  indexing.ipynb  random_graphs.ipynb
src/: __init__.py  constraints.py  inference.py  knowledgebase.py  language.py  parser.py  prolog.lark  table.py  types.py  unification.py
